Update dependencies version and improves code quality